# txt

./: .agent-context  .agent-progress  .gitignore  CLAUDE.md  README.md  go.mod  go.sum  main.go  package-lock.json  package.json  playwright.config.js  vercel.json
.claude/commands/: generate-story.md
.github/workflows/: test.yml
OpenMessage/: Info.plist
OpenMessage/OpenMessage/: BackendManager.swift  ContactsManager.swift  ContentView.swift  MenuBarView.swift  NotificationManager.swift  OpenMessageApp.swift  PairingView.swift
OpenMessage/OpenMessage.xcodeproj/: project.pbxproj
cmd/: binary_test.go  debugmedia.go  import.go  pair.go  pair_test.go  send.go  send_group.go  serve.go  serve_test.go
cmd/e2e-server/: main.go
cmd/genviz/: main.go
desktop/: .agent-context  .agent-progress  .gitignore  CLAUDE.md  README.md  build.sh  index.html  package.json  tsconfig.json  vite.config.ts
desktop/.harness/: state.json
desktop/scripts/: build-sidecar  cleanup-bridges  dev  gen-icon  release  smoke-url-scheme  updater-key
desktop/src/: main.ts  styles.css
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon-dev.icns  icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  notifications.rs  sse.rs
docs/: release-checklist.md  shortcuts.md
docs/plans/: 2026-04-17-textbridge-roadmap.md  2026-04-18-txt-rename.md  2026-04-18-window-lifecycle.md  2026-04-19-imessage-tapback-send-blocked.md  2026-04-19-issue-15-roadmap.md
e2e/: ui.spec.js
fastlane/: Appfile  Fastfile  README.md  report.xml
internal/app/: app.go  app_test.go  backfill.go  backfill_test.go  backup.go  backup_test.go  gm.go  gm_iface.go  outbox.go  signal.go  whatsapp.go
internal/client/: client.go  conversation.go  events.go  events_test.go  extract_test.go  tombstone.go  tombstone_test.go
internal/contacts/: macos.go  macos_test.go
internal/db/: contacts.go  conversations.go  conversations_test.go  db.go  db_test.go  drafts.go  messages.go  messages_test.go  outbox.go  (+5 more)
site/: index.html  next.config.mjs  package-lock.json  package.json  terminal-mock.html  vercel.json
web/: .gitignore  index.html  package.json  popover.html  tsconfig.json  vite.config.ts
(+95 files in other folders)
