[package]
name = "textbridge"
version = "0.1.0"
description = "Textbridge"
authors = ["James Dowzard"]
edition = "2021"

[lib]
name = "textbridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["single-instance"]
single-instance = ["dep:tauri-plugin-single-instance"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "s"
