[package]
name = "textbridge"
version = "0.1.0"
description = "Textbridge"
authors = ["James Dowzard"]
edition = "2021"

[lib]
name = "textbridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["single-instance"]
single-instance = ["dep:tauri-plugin-single-instance"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
# Native notifications with inline reply (P1 #9). Uses NSUserNotification under
# the hood — deprecated on macOS 26+ but still functional; upgrading to
# UNUserNotificationCenter is a later concern.
mac-notification-sys = "0.6"
# Async SSE client subscribing to the Go backend's /api/events stream.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
# URL building for detached conversation windows (P2 #22).
urlencoding = "2"
url = "2"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "s"
